@@ -190,9 +190,9 @@ _item_text_signals_emit(Elm_Naviframe_Item *it)
    char buf[1024];
 
    if ((it->title_label) && (it->title_label[0]))
-     edje_object_signal_emit(VIEW(it), "elm,state,title_label,show", "elm");
+     edje_object_signal_emit(VIEW(it), "elm,state,title,show", "elm");
    else
-     edje_object_signal_emit(VIEW(it), "elm,state,title_label,hide", "elm");
+     edje_object_signal_emit(VIEW(it), "elm,state,title,hide", "elm");
 
    if ((it->subtitle_label) && (it->subtitle_label[0]))
      edje_object_signal_emit(VIEW(it), "elm,state,subtitle,show", "elm");
@@ -290,6 +290,10 @@ _item_text_set_hook(Elm_Object_Item *it,
      {
         eina_stringshare_replace(&nit->title_label, label);
         snprintf(buf, sizeof(buf), "elm.text.title");
+        if (label)
+          edje_object_signal_emit(VIEW(it), "elm,state,title,show", "elm");
+        else
+          edje_object_signal_emit(VIEW(it), "elm,state,title,hide", "elm");
 
         //XXX: ACCESS
         if (_elm_config->access_mode == ELM_ACCESS_MODE_ON)
@@ -304,6 +308,10 @@ _item_text_set_hook(Elm_Object_Item *it,
      {
         eina_stringshare_replace(&nit->subtitle_label, label);
         snprintf(buf, sizeof(buf), "elm.text.subtitle");
+        if (label)
+          edje_object_signal_emit(VIEW(it), "elm,state,subtitle,show", "elm");
+        else
+          edje_object_signal_emit(VIEW(it), "elm,state,subtitle,hide", "elm");
 
         //XXX: ACCESS
         if (_elm_config->access_mode == ELM_ACCESS_MODE_ON)
@@ -332,6 +340,11 @@ _item_text_set_hook(Elm_Object_Item *it,
              eina_stringshare_replace(&pair->part, buf);
              nit->text_list = eina_inlist_append(nit->text_list,
                                                  EINA_INLIST_GET(pair));
+             if (label)
+               snprintf(buf, sizeof(buf), "elm,state,%s,show", part);
+             else
+               snprintf(buf, sizeof(buf), "elm,state,%s,hide", part);
+             edje_object_signal_emit(VIEW(it), buf, "elm");
           }
 
         //XXX: ACCESS
@@ -345,7 +358,6 @@ _item_text_set_hook(Elm_Object_Item *it,
      }
 
    edje_object_part_text_set(VIEW(nit), buf, label);
-   _item_text_signals_emit(nit);
 
    elm_layout_sizing_eval(WIDGET(nit));
 }
@@ -428,6 +440,7 @@ _item_content_set(Elm_Naviframe_Item *it,
    if (!content) return;
 
    edje_object_part_swallow(VIEW(it), CONTENT_PART, content);
+   edje_object_signal_emit(VIEW(it), "elm,state,content,show", "elm");
 
    evas_object_event_callback_add
      (content, EVAS_CALLBACK_DEL, _item_content_del_cb, it);
@@ -443,6 +456,7 @@ _item_title_prev_btn_set(Elm_Naviframe_Item *it,
    if (!btn) return;
 
    edje_object_part_swallow(VIEW(it), PREV_BTN_PART, btn);
+   edje_object_signal_emit(VIEW(it), "elm,state,prev_btn,show", "elm");
 
    evas_object_event_callback_add
      (btn, EVAS_CALLBACK_DEL, _item_title_prev_btn_del_cb, it);
@@ -458,6 +472,7 @@ _item_title_next_btn_set(Elm_Naviframe_Item *it,
    if (!btn) return;
 
    edje_object_part_swallow(VIEW(it), NEXT_BTN_PART, btn);
+   edje_object_signal_emit(VIEW(it), "elm,state,next_btn,show", "elm");
 
    evas_object_event_callback_add
      (btn, EVAS_CALLBACK_DEL, _item_title_next_btn_del_cb, it);
@@ -473,6 +488,7 @@ _item_title_icon_set(Elm_Naviframe_Item *it,
    if (!icon) return;
 
    edje_object_part_swallow(VIEW(it), ICON_PART, icon);
+   edje_object_signal_emit(VIEW(it), "elm,state,icon,show", "elm");
 
    evas_object_event_callback_add
      (icon, EVAS_CALLBACK_DEL, _item_title_icon_del_cb, it);
@@ -486,6 +502,7 @@ _item_content_unset(Elm_Naviframe_Item *it)
    if (!content) return NULL;
 
    edje_object_part_unswallow(VIEW(it), it->content);
+   edje_object_signal_emit(VIEW(it), "elm,state,content,hide", "elm");
 
    evas_object_event_callback_del
      (content, EVAS_CALLBACK_DEL, _item_content_del_cb);
@@ -502,6 +519,7 @@ _item_title_prev_btn_unset(Elm_Naviframe_Item *it)
    if (!content) return NULL;
 
    edje_object_part_unswallow(VIEW(it), it->title_prev_btn);
+   edje_object_signal_emit(VIEW(it), "elm,state,prev_btn,hide", "elm");
 
    evas_object_event_callback_del
      (content, EVAS_CALLBACK_DEL, _item_title_prev_btn_del_cb);
@@ -518,6 +536,7 @@ _item_title_next_btn_unset(Elm_Naviframe_Item *it)
    if (!content) return NULL;
 
    edje_object_part_unswallow(VIEW(it), it->title_next_btn);
+   edje_object_signal_emit(VIEW(it), "elm,state,next_btn,hide", "elm");
 
    evas_object_event_callback_del
      (content, EVAS_CALLBACK_DEL, _item_title_next_btn_del_cb);
@@ -534,6 +553,7 @@ _item_title_icon_unset(Elm_Naviframe_Item *it)
    if (!content) return NULL;
 
    edje_object_part_unswallow(VIEW(it), it->title_icon);
+   edje_object_signal_emit(VIEW(it), "elm,state,icon,hide", "elm");
 
    evas_object_event_callback_del
      (content, EVAS_CALLBACK_DEL, _item_title_icon_del_cb);
@@ -571,18 +591,15 @@ _title_content_set(Elm_Naviframe_Item *it,
    if (pair)
      {
         prev_content = edje_object_part_swallow_get(VIEW(it), part);
-        if (prev_content != content)
+        if (prev_content == content) return;
+        if (content)
+          edje_object_part_swallow(VIEW(it), part, content);
+        if (prev_content)
           {
-             if (content)
-               {
-                  evas_object_event_callback_del(prev_content,
-                                                 EVAS_CALLBACK_DEL,
-                                                 _title_content_del);
-                  snprintf(buf, sizeof(buf), "elm,state,%s,hide", part);
-                  elm_object_signal_emit(VIEW(it), buf, "elm");
-               }
+             evas_object_event_callback_del(prev_content,
+                                            EVAS_CALLBACK_DEL,
+                                            _title_content_del);
              evas_object_del(prev_content);
-             if (!content) return;
           }
      }
    else
@@ -599,15 +616,14 @@ _title_content_set(Elm_Naviframe_Item *it,
         eina_stringshare_replace(&pair->part, part);
         it->content_list = eina_inlist_append(it->content_list,
                                               EINA_INLIST_GET(pair));
-      }
-    if (prev_content != content)
-      {
-         evas_object_event_callback_add(content,
-                                        EVAS_CALLBACK_DEL,
-                                        _title_content_del,
-                                        pair);
-      }
-    edje_object_part_swallow(VIEW(it), part, content);
+        evas_object_event_callback_add(content,
+                                       EVAS_CALLBACK_DEL,
+                                       _title_content_del,
+                                       pair);
+        edje_object_part_swallow(VIEW(it), part, content);
+        snprintf(buf, sizeof(buf), "elm,state,%s,show", part);
+        edje_object_signal_emit(VIEW(it), buf, "elm");
+     }
 }
 
 static void
@@ -630,8 +646,6 @@ _item_content_set_hook(Elm_Object_Item *it,
      _item_title_icon_set(nit, content);
    else
      _title_content_set(nit, part, content);
-
-   _item_content_signals_emit(nit);
 
    elm_layout_sizing_eval(WIDGET(it));
 }
@@ -710,8 +724,6 @@ _item_content_unset_hook(Elm_Object_Item *it,
    else
      o = _title_content_unset(nit, part);
 
-   _item_content_signals_emit(nit);
-
    elm_layout_sizing_eval(WIDGET(it));
 
    return o;
@@ -749,14 +761,6 @@ _elm_naviframe_smart_sizing_eval(Evas_Object *obj)
    evas_object_size_hint_max_set(obj, -1, -1);
 }
 
-static Eina_Bool
-_item_pop_idler(void *data)
-{
-   elm_naviframe_item_pop(data);
-
-   return ECORE_CALLBACK_CANCEL;
-}
-
 static void
 _on_item_back_btn_clicked(void *data,
                           Evas_Object *obj,
@@ -767,8 +771,7 @@ _on_item_back_btn_clicked(void *data,
       prevent those scenario and guarantee only one clicked for it's own
       page. */
    evas_object_smart_callback_del(obj, "clicked", _on_item_back_btn_clicked);
-
-   ecore_idler_add(_item_pop_idler, data);
+   elm_naviframe_item_pop(data);
 }
 
 static Evas_Object *
@@ -1022,7 +1025,9 @@ _item_new(Evas_Object *obj,
      (VIEW(it), "elm,action,title,clicked", "", _on_item_title_clicked, it);
 
    _item_style_set(it, item_style);
-   _item_text_set_hook((Elm_Object_Item *)it, "elm.text.title", title_label);
+
+   if (title_label)
+     _item_text_set_hook((Elm_Object_Item *)it, "elm.text.title", title_label);
 
    //title buttons
    if ((!prev_btn) && sd->auto_pushed && prev_it)
